# fastapi-mongodb-template

./: pyproject.toml
app/: main.py
app/api/api_v1/: __init__.py
app/api/api_v1/test/: controller.py  route.py
app/api/dependencies/: deps.py
app/config/: .env  config.py
app/crud/: base.py  test.py
app/db/: mongo_db.py
app/models/: test.py
